force-app/main/default/objects/Phase_Tracker__c/Phase_Tracker__c.object-meta.xml
<CustomObject>
    <label>Phase Tracker</label>
    <nameField>
        <displayFormat>PTN-{000000}</displayFormat>
        <label>Phase Tracker No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>