force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Co_funding_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>A_A_Co_funding_Project_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>A&amp;A Co-funding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>