force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Co_funding_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>A_A_Co_funding_Total_Variance__c</fullName>
    <formula>( Parent_Tracker__r.A_A_Co_funding_Project_Total__c - A_A_Co_funding_Project_Total__c ) / Parent_Tracker__r.A_A_Co_funding_Project_Total__c * -1</formula>
    <label>% A&amp;A Co-funding Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>