force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Co_funding_Total_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>A_A_Co_funding_Total_Variance_Number__c</fullName>
    <formula>A_A_Co_funding_Project_Total__c -  Parent_Tracker__r.A_A_Co_funding_Project_Total__c</formula>
    <label>A&amp;A Co-funding Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>