force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Grant_Costs_Percentage__c.field-meta.xml
<CustomField>
    <fullName>A_A_Grant_Costs_Percentage__c</fullName>
    <formula>AA_Grant_Project_Total__c / Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A&amp;A Grant Costs %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>