force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Grant_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>A_A_Grant_Total_Variance__c</fullName>
    <formula>(  Parent_Tracker__r.AA_Grant_Project_Total__c  - AA_Grant_Project_Total__c ) / Parent_Tracker__r.AA_Grant_Project_Total__c * -1</formula>
    <label>% A&amp;A Grant Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>