force-app/main/default/objects/Phase_Tracker__c/fields/A_A_Grant_Total_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>A_A_Grant_Total_Variance_Number__c</fullName>
    <formula>AA_Grant_Project_Total__c -  Parent_Tracker__r.AA_Grant_Project_Total__c</formula>
    <label>A&amp;A Grant Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>