force-app/main/default/objects/Phase_Tracker__c/fields/Average_per_Home__c.field-meta.xml
<CustomField>
    <fullName>Average_per_Home__c</fullName>
    <formula>Total_Project_Costs_Minus_LCH_20k_per__c /  Homes_Treated_Minus_LCH_On_Gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average per Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>