force-app/main/default/objects/Phase_Tracker__c/fields/Capital_Co_funding_Total__c.field-meta.xml
<CustomField>
    <fullName>Capital_Co_funding_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Capital Co-funding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>