force-app/main/default/objects/Phase_Tracker__c/fields/Capital_Co_funding_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Capital_Co_funding_Total_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Capital_Co_funding_Total__c - Capital_Co_funding_Total__c ) / Parent_Tracker__r.Capital_Co_funding_Total__c * -1</formula>
    <label>% Capital Co-funding Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>