force-app/main/default/objects/Phase_Tracker__c/fields/Capital_Grant_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Capital_Grant_Total_Variance__c</fullName>
    <formula>(  Parent_Tracker__r.Capital_Grant_Project_Total__c  -  Capital_Grant_Project_Total__c  ) / Parent_Tracker__r.Capital_Grant_Project_Total__c * -1</formula>
    <label>% Capital Grant Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>