force-app/main/default/objects/Phase_Tracker__c/fields/Capital_Grant_Total_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Capital_Grant_Total_Variance_Number__c</fullName>
    <formula>Capital_Grant_Project_Total__c -  Parent_Tracker__r.Capital_Grant_Project_Total__c</formula>
    <label>Capital Grant Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>