force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Project_Total__c</fullName>
    <formula>Capital_Co_funding_Total__c +  A_A_Co_funding_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>