force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Total_FY_24_25_Variance_Numbe__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_FY_24_25_Variance_Numbe__c</fullName>
    <formula>Cofunding_Total_FY_2425__c -  Parent_Tracker__r.Cofunding_Total_FY_2425__c</formula>
    <label>Co-funding Total FY 24/25 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>