force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Total_FY_25_26_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_FY_25_26_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Cofunding_Total_FY_2526__c - Cofunding_Total_FY_2526__c ) / Parent_Tracker__r.Cofunding_Total_FY_2526__c * -1</formula>
    <label>% Co-funding Total FY 25/26 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>