force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Total_FY_25_26_Variance_Numbe__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_FY_25_26_Variance_Numbe__c</fullName>
    <formula>Cofunding_Total_FY_2526__c -  Parent_Tracker__r.Cofunding_Total_FY_2526__c</formula>
    <label>Co-funding Total FY 25/26 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>