force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Co_funding_Project_Total__c - Co_funding_Project_Total__c ) / Parent_Tracker__r.Co_funding_Project_Total__c * -1</formula>
    <label>% Co-funding Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>