force-app/main/default/objects/Phase_Tracker__c/fields/Co_funding_Total_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_Variance_Number__c</fullName>
    <formula>Co_funding_Project_Total__c -  Parent_Tracker__r.Co_funding_Project_Total__c</formula>
    <label>Co-funding Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>