force-app/main/default/objects/Phase_Tracker__c/fields/EPC_C_Homes_Percentage_Within_10__c.field-meta.xml
<CustomField>
    <fullName>EPC_C_Homes_Percentage_Within_10__c</fullName>
    <formula>IF(AND(Percentage_EPC_C_Homes__c &lt;= 0.10, Percentage_EPC_C_Homes__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPC C+ Homes Within 10%?</label>
    <type>Text</type>
</CustomField>