force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Grant_Project_Total__c</fullName>
    <formula>Capital_Grant_Project_Total__c +  AA_Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>