force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Total_FY_2627__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_FY_2627__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant Total FY 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>