force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Total_FY_26_27_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_FY_26_27_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Grant_Total_FY_2627__c - Grant_Total_FY_2627__c ) / Parent_Tracker__r.Grant_Total_FY_2627__c * -1</formula>
    <label>% Grant Total FY 26/27 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>