force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Total_FY_27_28_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_FY_27_28_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Grant_Total_FY_2728__c - Grant_Total_FY_2728__c ) / Parent_Tracker__r.Grant_Total_FY_2728__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Grant Total FY 27/28 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>