force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Total_FY_27_28_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_FY_27_28_Variance_Number__c</fullName>
    <formula>Grant_Total_FY_2728__c -  Parent_Tracker__r.Grant_Total_FY_2728__c</formula>
    <label>Grant Total FY 27/28 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>