force-app/main/default/objects/Phase_Tracker__c/fields/Grant_Total_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_Variance_Number__c</fullName>
    <formula>Grant_Project_Total__c -  Parent_Tracker__r.Grant_Project_Total__c</formula>
    <label>Grant Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>