force-app/main/default/objects/Phase_Tracker__c/fields/Homes_Treated__c.field-meta.xml
<CustomField>
    <fullName>Homes_Treated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Homes Treated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>