force-app/main/default/objects/Phase_Tracker__c/fields/Homes_Treated_Minus_All_LCH__c.field-meta.xml
<CustomField>
    <fullName>Homes_Treated_Minus_All_LCH__c</fullName>
    <formula>Homes_Treated__c - (LCH_On_Gas_Incentive_Homes__c +  LCH_Off_Gas_Incentive_Homes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes Treated Minus All LCH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>