force-app/main/default/objects/Phase_Tracker__c/fields/Homes_Treated_Variance__c.field-meta.xml
<CustomField>
    <fullName>Homes_Treated_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Homes_Treated__c -  Homes_Treated__c  ) / Parent_Tracker__r.Homes_Treated__c * -1</formula>
    <label>% Homes Treated Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>