force-app/main/default/objects/Phase_Tracker__c/fields/Homes_Treated_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Homes_Treated_Variance_Number__c</fullName>
    <formula>Homes_Treated__c -  Parent_Tracker__r.Homes_Treated__c</formula>
    <label>Homes Treated Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>