force-app/main/default/objects/Phase_Tracker__c/fields/Homes_Treated_x_7_500__c.field-meta.xml
<CustomField>
    <fullName>Homes_Treated_x_7_500__c</fullName>
    <formula>(Homes_Treated_Minus_LCH_On_Gas__c * 7500) +  (LCH_Off_Gas_Incentive_Homes__c * 7500)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Base + Off-Gas Cost Cap Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>