force-app/main/default/objects/Phase_Tracker__c/fields/Included_Baselines__c.field-meta.xml
<CustomField>
    <fullName>Included_Baselines__c</fullName>
    <label>Included Baselines</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>