force-app/main/default/objects/Phase_Tracker__c/fields/LCH_Off_Gas_Incentive_Homes__c.field-meta.xml
<CustomField>
    <fullName>LCH_Off_Gas_Incentive_Homes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LCH Off Gas Incentive Homes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>