force-app/main/default/objects/Phase_Tracker__c/fields/LCH_Off_Gas_Incentive_Homes_Variance_Num__c.field-meta.xml
<CustomField>
    <fullName>LCH_Off_Gas_Incentive_Homes_Variance_Num__c</fullName>
    <formula>LCH_Off_Gas_Incentive_Homes__c -  Parent_Tracker__r.LCH_Off_Gas_Incentive_Homes__c</formula>
    <label>LCH Off Gas Incentive Homes Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>