force-app/main/default/objects/Phase_Tracker__c/fields/LCH_On_Gas_Incentive_Homes_Variance__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Homes_Variance__c</fullName>
    <formula>( Parent_Tracker__r.LCH_On_Gas_Incentive_Homes__c - LCH_On_Gas_Incentive_Homes__c ) / Parent_Tracker__r.LCH_On_Gas_Incentive_Homes__c * -1</formula>
    <label>% LCH On Gas Incentive Homes Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>