force-app/main/default/objects/Phase_Tracker__c/fields/LCH_On_Gas_Incentive_Homes_Variance_Numb__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Homes_Variance_Numb__c</fullName>
    <formula>LCH_On_Gas_Incentive_Homes__c -  Parent_Tracker__r.LCH_On_Gas_Incentive_Homes__c</formula>
    <label>LCH On Gas Incentive Homes Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>