force-app/main/default/objects/Phase_Tracker__c/fields/LCH_On_Gas_Incentive_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Percentage__c</fullName>
    <formula>LCH_On_Gas_Incentive_Homes__c /  Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH On Gas Incentive %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>