force-app/main/default/objects/Phase_Tracker__c/fields/LCH_On_Gas_Percentage_Incentive_within10__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Percentage_Incentive_within10__c</fullName>
    <formula>IF(AND(LCH_On_Gas_Incentive_Percentage__c &lt;= 0.10, LCH_On_Gas_Incentive_Percentage__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH On Gas Incentive within 10%?</label>
    <type>Text</type>
</CustomField>