force-app/main/default/objects/Phase_Tracker__c/fields/Lock_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Lock_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Refresh</label>
    <type>Checkbox</type>
</CustomField>