force-app/main/default/objects/Phase_Tracker__c/fields/Non_Social_Homes__c.field-meta.xml
<CustomField>
    <fullName>Non_Social_Homes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Social Homes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>