force-app/main/default/objects/Phase_Tracker__c/fields/Non_Social_Homes_Within_30__c.field-meta.xml
<CustomField>
    <fullName>Non_Social_Homes_Within_30__c</fullName>
    <formula>IF(AND(Percentage_Non_Social_Homes__c &lt;= 0.30, Percentage_Non_Social_Homes__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Social Homes Within 30%?</label>
    <type>Text</type>
</CustomField>