force-app/main/default/objects/Phase_Tracker__c/fields/Parent_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Parent_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Tracker</label>
    <referenceTo>Phase_Tracker__c</referenceTo>
    <relationshipLabel>Phase Trackers</relationshipLabel>
    <relationshipName>Phase_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>