force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_A_A_Grant_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Percentage_A_A_Grant_Project_Total__c</fullName>
    <formula>AA_Grant_Project_Total__c  /  Parent_Tracker__r.AA_Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% A&amp;A Grant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>