force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Co_funding_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Co_funding_Project_Total__c</fullName>
    <formula>Co_funding_Project_Total__c  /  Parent_Tracker__r.Co_funding_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Co-funding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>