force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Co_funding_Total_FY_25_26__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Co_funding_Total_FY_25_26__c</fullName>
    <formula>Cofunding_Total_FY_2526__c  /  Parent_Tracker__r.Cofunding_Total_FY_2526__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Co-funding Total FY 25/26</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>