force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_EPC_C_Homes__c.field-meta.xml
<CustomField>
    <fullName>Percentage_EPC_C_Homes__c</fullName>
    <formula>Starting_EPC_C_Homes__c /  Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% EPC C+ Homes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>