force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Grant_Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Grant_Project_Total__c</fullName>
    <formula>Grant_Project_Total__c  /  Parent_Tracker__r.Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Grant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>