force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Grant_Total_FY_26_27__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Grant_Total_FY_26_27__c</fullName>
    <formula>Grant_Total_FY_2627__c /  Parent_Tracker__r.Grant_Total_FY_2627__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Grant Total FY 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>