force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Grant_Total_FY_27_28__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Grant_Total_FY_27_28__c</fullName>
    <formula>Grant_Total_FY_2728__c /  Parent_Tracker__r.Grant_Total_FY_2728__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Grant Total FY 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>