force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Homes_Treated__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Homes_Treated__c</fullName>
    <formula>Homes_Treated__c /  Parent_Tracker__r.Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Homes Treated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>