force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_LCH_Off_Gas_Incentive_Homes__c.field-meta.xml
<CustomField>
    <fullName>Percentage_LCH_Off_Gas_Incentive_Homes__c</fullName>
    <formula>LCH_Off_Gas_Incentive_Homes__c  /  Parent_Tracker__r.LCH_Off_Gas_Incentive_Homes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% LCH Off Gas Incentive Homes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>