force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Non_Social_Homes__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Non_Social_Homes__c</fullName>
    <formula>Non_Social_Homes__c  /  Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Non-Social Homes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>