force-app/main/default/objects/Phase_Tracker__c/fields/Percentage_Total_Project_Costs__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Total_Project_Costs__c</fullName>
    <formula>Total_Project_Costs__c  /  Parent_Tracker__r.Total_Project_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Total Project Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>