force-app/main/default/objects/Phase_Tracker__c/fields/Starting_EPC_C_Homes__c.field-meta.xml
<CustomField>
    <fullName>Starting_EPC_C_Homes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting EPC C+ Homes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>