force-app/main/default/objects/Phase_Tracker__c/fields/Total_A_A_Costs_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_A_A_Costs_Percentage__c</fullName>
    <formula>Total_Project_A_A__c /  Total_Project_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total A&amp;A Costs %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>