force-app/main/default/objects/Phase_Tracker__c/fields/Total_Costs_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs_Variance__c</fullName>
    <formula>( Parent_Tracker__r.Total_Project_Costs__c - Total_Project_Costs__c ) / Parent_Tracker__r.Total_Project_Costs__c * -1</formula>
    <label>% Total Costs Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>